...
            app:layout_constraintStart_toStartOf="@+id/guideline_workspace_divider"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/txt_pattern_pieces"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:background="@{viewModel.clickedPattenPieces?@drawable/pattern_button_selected:@drawable/pattern_button_unselected}"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:gravity="center"
                android:onClick="@{() -> viewModel.clickPatternReference(true)}"
                android:text="@string/pattern_pieces"
                android:textColor="@color/needle_grey"
                android:textSize="@dimen/text_reference_layout" />

            <TextView
                android:id="@+id/txt_reeferance_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:background="@{viewModel.clickedPattenPieces?@drawable/pattern_button_unselected:@drawable/pattern_button_selected}"
                android:fontFamily="@font/avenir_next_lt_pro_regular"
                android:gravity="center"
...
            android:onClick="@{() -> viewModel.onNotesClick()}"
            android:enabled="@{viewModel.isAddNotesEnabled()}"
            android:layout_marginStart="@dimen/small_padding"
            android:padding="@dimen/medium_padding"
            android:textColor="@color/needle_grey"
            android:textSize="@dimen/text_size_select_layout"
            app:layout_constraintEnd_toStartOf="@id/txt_reset"
            app:layout_constraintTop_toBottomOf="@+id/top_border"
            />

        <TextView
            android:id="@+id/txt_reset"
            android:layout_width="wrap_content"
...
            android:fontFamily="@font/avenir_next_lt_pro_regular"
            android:onClick="@{() -> viewModel.clickReset()}"
            android:padding="@dimen/medium_padding"
            android:text="@string/reset"
            android:textColor="@color/needle_grey"
            android:textSize="@dimen/text_size_select_layout"
            app:layout_constraintEnd_toStartOf="@+id/text_complete_pieces"
            app:layout_constraintTop_toBottomOf="@+id/top_border" />

        <TextView
            android:id="@+id/text_complete_pieces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:textSize="@dimen/text_seek_complete"
            app:layout_constraintBottom_toBottomOf="@+id/txt_reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_reset" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_pieces"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/dimen_0"
            android:layout_gravity="center_vertical"
            android:elevation="@dimen/elevation_pieces_reference"
            android:orientation="vertical"
            app:data="@{viewModel.data.patternPieces}"
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_workspace_divider"
            app:layout_constraintTop_toBottomOf="@+id/guideline_selvages_horizontal"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button_send_to_projector"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/dimen_0"
            android:background="@{(viewModel.isWorkspaceSocketConnection &amp;&amp; viewModel.isWorkspaceIsCalibrated())?@drawable/button_rounded_red_bg:@drawable/button_rounded_grey_bg}"
            android:elevation="@dimen/elevation_pieces_reference"
            android:enabled="@{(viewModel.isWorkspaceSocketConnection &amp;&amp; viewModel.isWorkspaceIsCalibrated())}"
            android:fontFamily="@font/avenir_next_lt_pro_demi"
            android:minHeight="25dp"
            android:onClick="@{() -> viewModel.projectWorkspace()}"
            android:text="@string/send_to_projector"
            android:textColor="@android:color/white"
            android:textSize="@dimen/send_to_projector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_save_and_exit"
            app:layout_constraintHeight_percent=".09"
            app:layout_constraintStart_toEndOf="@+id/guideline_workspace_divider"
            app:layout_constraintTop_toTopOf="@+id/lineview"
            app:layout_constraintWidth_percent=".25" />

        <Button
...
            android:layout_height="match_parent"
            android:elevation="@dimen/elevation_card"
            android:visibility="gone"
            android:clickable="true"/>

        <ImageView
            android:id="@+id/coach_mark_popup"
            android:layout_width="@dimen/coachmark_popup_width"
            android:layout_height="@dimen/coachmark_popup_height"
            android:background="@android:color/transparent"
            android:elevation="@dimen/elevation_card"
            android:src="@drawable/coachmark_video_popup"
            android:animateLayoutChanges="true"
...
