...
            app:layout_constraintBottom_toBottomOf="@+id/layout_workspace"
            app:layout_constraintEnd_toEndOf="@+id/layout_workspace"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="@+id/layout_workspace" />

        <TextView
            android:id="@+id/txt_select_all"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:background="@drawable/button_rounded_right_top_bg"
            android:drawableTop="@drawable/ic_select_all_icon"
            android:elevation="@dimen/elevation_card"
...
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layout_workspace"
            app:layout_constraintVertical_bias=".1" />

        <TextView
            android:id="@+id/txt_mirror_v"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:background="@drawable/button_while_bg"
            android:drawableTop="@drawable/ic_mirror_vertical"
            android:elevation="@dimen/elevation_card"
...
            app:layout_constraintEnd_toEndOf="@+id/button_width_guidelines"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_select_all" />

        <TextView
            android:id="@+id/txt_mirror_h"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:background="@drawable/button_while_bg"
            android:drawableTop="@drawable/ic_mirror_horizontal"
            android:elevation="@dimen/elevation_card"
...
            app:layout_constraintEnd_toEndOf="@+id/button_width_guidelines"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_mirror_v" />

        <TextView
            android:id="@+id/txt_clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:background="@drawable/button_rounded_right_bottom_bg"
            android:drawableTop="@drawable/ic_clear"
            android:elevation="@dimen/elevation_card"
...
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_mirror_h" />


        <TextView
            android:id="@+id/txt_recalibrate"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_v_small"
            android:background="@drawable/button_rounded_right_bg"
            android:drawableTop="@drawable/ic_recalibrate_icon"
...
            android:layout_height="@dimen/coachMarkEndPopupHeight"
            android:animateLayoutChanges="true"
            android:background="@android:color/transparent"
            android:elevation="@dimen/elevation_card"
            android:src="@drawable/coachmark_workspace_end"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/txt_tutorial"
            app:layout_constraintStart_toStartOf="@+id/txt_tutorial" />

        <TextView
            android:id="@+id/txt_rotate_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:paddingEnd="@dimen/medium_padding"
            android:paddingBottom="@dimen/small_padding"
            android:text="@string/tutorial"
            android:textColor="@color/needle_grey"
            android:textSize="@dimen/text_instruction"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_instructions"
            app:layout_constraintTop_toBottomOf="@+id/layout_workspace" />

        <TextView
            android:id="@+id/txt_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
