...
    <string name="garments">Garment</string>
    <string name="lining">Lining</string>
    <string name="interfacing">Interfacing</string>
    <string name="other">Other</string>

    <string name="instruction"><u>Instructions</u></string>
    <string name="sewing_instructions">Sewing Instructions</string>
    <string name="tutorial">Tutorial</string>
    <string name="splice">Splice</string>
    <string name="w_Nap">w/NAP</string>
    <string name="_45">45” w/Nap</string>
    <string name="_60">60” w/Nap</string>
    <string name="_20">20”</string>
    <string name="_45text">45”</string>
...
    <string name="mirror">Mirror</string>
    <string name="api_failed">API Failed</string>
    <string name="mirror_message">Piece will be replaced in workspace with a mirrored version.</string> <!--// mirror reminder done-->
    <string name="api_failed_message">Unable to save to Workspace</string>
    <string name="launch_camera">CONTINUE</string>
    <string name="launch_camera_small_case">Continue</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_smallcase">Cancel</string>
    <string name="empty_string"></string>
    <string name="ok">OK</string>
    <string name="reference_layout">Reference Layout</string>
    <string name="pattern_pieces">Pattern Pieces</string>
    <string name="recalibrate">Calibrate</string>
    <string name="connect">Connect</string>
    <string name="seek_text"><![CDATA["<font color='#AD201A'> %1$d</font>/%2$d"]]></string>
    <string name="splice_text"> Spliced screen %1$d of %2$d</string>
    <string name="tap_to_enlarge">Double Tap to Zoom</string>
    <string name="long_press_to_pattern_piece">LONG PRESS ON PATTERN PIECES TO DRAG INTO WORKSPACE</string>
    <string name="select_a_layout">Select a Layout</string>
    <string name="question_mark">\?</string>
...
    <string name="str_cancel">CANCEL</string>
    <string name="alert_no">NO</string>
    <string name="alert_yes">YES</string>
    <string name="str_recalib">Re-Calibrate</string>
    <string name="str_calib">Calibrate</string>
    <string name="str_connect">Connect</string>
    <string name="pattern_instructions">Pattern Instructions</string>
    <string name="download_failed">Download Failed</string>
    <string name="download_failed_message">Downloading pattern pieces is not completed.</string>
    <string name="guest_user_ws_exit_message">Guest User does not have save functionality.</string>
    <string name="guest_user_ws_enter_message">All pattern pieces are not downloaded.</string>
    <string name="tutorial_for_workspace">Tutorial for workspace</string>
    <string name="turn_on_permissions">App will not work properly without this permission. Please turn on the permission from settings</string>
...
