...

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/header_view_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/avenir_next_lt_pro_medium"
                        android:gravity="start"
                        android:text="@string/pattern_details"
                        android:textColor="@color/needle_grey"
                        android:textSize="@dimen/size_21sp" />
                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
...
                android:spinnerMode="dropdown"
                android:theme="@style/AlwaysEnableScrollBar"
                android:visibility="@{viewModel.isShowSpinner() ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toTopOf="@id/status_layout"
                app:layout_constraintEnd_toStartOf="@id/end_guideline2"
                app:layout_constraintTop_toBottomOf="@id/subscription"
                app:layout_constraintTop_toTopOf="@+id/content_header" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:clickable="false"
                android:focusableInTouchMode="false"
...
                app:layout_constraintBottom_toTopOf="@+id/buttonTopGuideLine"
                app:layout_constraintEnd_toEndOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/middle_guideline"
                app:layout_constraintTop_toBottomOf="@id/status_layout">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/avenir_next_lt_pro_regular"
                    android:lineSpacingMultiplier="1.25"
                    android:text="@{HtmlCompat.fromHtml(viewModel.patternDescription,HtmlCompat.FROM_HTML_OPTION_USE_CSS_COLORS)}"
...
                    android:paddingHorizontal="12dp"
                    android:textColor="@color/needle_grey"
                    android:textSize="@dimen/size_14px"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/text_instructions"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.15" />

                <TextView
                    android:id="@+id/text_instructions"
                    android:layout_width="wrap_content"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_yardage"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.15" />

                <TextView
                    android:id="@+id/text_watchvideo2"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_0"
                    android:layout_marginStart="@dimen/margin_left_button"
                    android:background="@drawable/workspace_border"
                    android:fontFamily="@font/avenir_next_lt_pro_demi"
                    android:gravity="center"
...
